meja/tests/module-scoping.stderr
File "tests/module-scoping.meja", line 33, characters 14-15:
Error: Incompatible types B.t -> B.A.t -> B.B.t -> 'a and
       t -> A.t -> B.t -> 'b:
       Cannot unify B.t and t
